# qdftJai

./: generate.jai  module.jai
qdft/c/: CMakeLists.txt  qdft_c.cpp  qdft_c.h
